--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 :root {
   --black: #000;
-  --gold: #E2AB3F;
+  --gold: #e2ab3f;
+  --balqis: "Balqis";
+  --robotocondensed-light: "RobotoCondensed-Light";
+  --robotocondensed-light-italic: "RobotoCondensed-LightItalic";
+  --robotocondensed-regular: "RobotoCondensed-Regular";
 }
 
 @font-face {
-  font-family: 'Balqis';
-  src: url('../fonts/balqis.woff2');
-  src: url('../fonts/balqis.woff2') format('woff2'),
-    url('../fonts/balqis.woff') format('woff');
+  font-family: "Balqis";
+  src: url("../fonts/balqis.woff2");
+  src: url("../fonts/balqis.woff2") format("woff2"),
+    url("../fonts/balqis.woff") format("woff");
 
   font-style: normal;
   font-weight: 300;
@@ -15,11 +19,10 @@
 }
 
 @font-face {
-  font-family: 'RobotoCondensed-Light';
-  src: url('../fonts/RobotoCondensed-Light.woff2');
-  src: url('../fonts/RobotoCondensed-Light.woff2') format('woff2'),
-    url('../fonts/RobotoCondensed-Light.woff') format('woff');
-
+  font-family: "RobotoCondensed-Light";
+  src: url("../fonts/RobotoCondensed-Light.woff2");
+  src: url("../fonts/RobotoCondensed-Light.woff2") format("woff2"),
+    url("../fonts/RobotoCondensed-Light.woff") format("woff");
 
   font-style: normal;
   font-weight: 300;
@@ -27,21 +30,20 @@
 }
 
 @font-face {
-  font-family: 'RobotoCondensed-LightItalic';
-  src: url('../fonts/RobotoCondensed-LightItalic.woff2');
-  src: url('../fonts/RobotoCondensed-LightItalic.woff2') format('woff2'),
-    url('../fonts/RobotoCondensed-LightItalic.woff') format('woff');
+  font-family: "RobotoCondensed-LightItalic";
+  src: url("../fonts/RobotoCondensed-LightItalic.woff2");
+  src: url("../fonts/RobotoCondensed-LightItalic.woff2") format("woff2"),
+    url("../fonts/RobotoCondensed-LightItalic.woff") format("woff");
   font-style: italic;
   font-weight: 300;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'RobotoCondensed-Regular';
-  src: url('../fonts/RobotoCondensed-Regular.woff2');
-  src: url('../fonts/RobotoCondensed-Regular.woff2') format('woff2'),
-    url('../fonts/RobotoCondensed-Regular.woff') format('woff');
-
+  font-family: "RobotoCondensed-Regular";
+  src: url("../fonts/RobotoCondensed-Regular.woff2");
+  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"),
+    url("../fonts/RobotoCondensed-Regular.woff") format("woff");
 
   font-style: 400;
   font-weight: 300;
@@ -69,7 +71,7 @@ ul {
 
 body {
   color: var(--black);
-  font-family: 'RobotoCondensed-Light';
+  font-family: "RobotoCondensed-Light";
   font-size: 18px;
   font-style: normal;
   font-weight: 300;
@@ -107,7 +109,7 @@ body {
   line-height: 28px;
   font-size: 24px;
   color: var(--black);
-  font-family: 'RobotoCondensed-LightItalic';
+  font-family: "RobotoCondensed-LightItalic";
   display: block;
   margin-top: -30px;
   margin-left: 185px;
@@ -120,7 +122,7 @@ body {
   align-items: center;
   font-size: 24px;
   font-weight: 400;
-  font-family: 'RobotoCondensed-Regular';
+  font-family: "RobotoCondensed-Regular";
 }
 
 .menu__list {
@@ -129,7 +131,7 @@ body {
 }
 
 .menu__link {
-  transition: all .6s;
+  transition: all 0.6s;
 }
 
 .menu__link:hover {
@@ -150,7 +152,7 @@ body {
   margin-top: -6%;
   margin-right: 8%;
   display: block;
-  font-family: 'RobotoCondensed-LightItalic';
+  font-family: "RobotoCondensed-LightItalic";
   font-size: 56px;
   font-style: italic;
   font-weight: 300;
@@ -167,7 +169,7 @@ body {
   width: 30px;
   height: 30px;
   left: 0;
-  background-image: url('../images/phone-icon.svg');
+  background-image: url("../images/phone-icon.svg");
 }
 
 /* ======== FAIRY =========== */
@@ -184,7 +186,7 @@ body {
 .fairy__slider {
   width: 50%;
 }
-.slick-btn{
+.slick-btn {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -197,7 +199,7 @@ body {
   left: 0;
 }
 .slick-next {
-  right:0;
+  right: 0;
 }
 
 .fairy__content {
@@ -205,15 +207,58 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
 }
 
 .fairy__text {
- padding: 10px 0;
+  padding: 10px 0;
 }
 
 .fairy__body-title {
-  font-family: 'RobotoCondensed-Regular';
+  font-family: "RobotoCondensed-Regular";
   font-weight: 400;
 }
 
+/* ==== TRIP ========= */
+
+.trip {
+  padding: 200px 0;
+}
+
+.trip__inner {
+  display: flex;
+}
+.trip__content {
+  width: 50%;
+}
+.trip__content-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 585px;
+  height: 100%;
+  margin-left: auto;
+  padding-left: 15px;
+}
+.trip__title span {
+  margin-left: 240px;
+  margin-top: -25px;
+}
+.trip__item {
+  font-family: var(--robotocondensed-light);
+  font-size: 24px;
+}
+.trip__item:first-child {
+  font-family: var(--robotocondensed-regular);
+  margin-bottom: 20px;
+}
+
+.trip__btn {
+  padding: 11px 53px;
+  width: 280px;
+  text-transform: uppercase;
+  font-size: 24px;
+  border: 1px solid var(--gold);
+}
+.trip__slider {
+  width: 50%;
+}
